# wildcatting-classic

./: COPYING  MANIFEST.in  Makefile  ProjectHome.md  README  go-wildcatting  pyproject.toml  setup.py  wildcatting.py
docs/architecture/: overview.md  review.md
test/: suite  suite.py  test_financial.py  test_game.py  test_game_integration.py  test_gameservice.py  test_information_hiding.py  test_model_oilfield.py  test_model_serialize.py  test_oilprices.py  test_reservoir.py  test_stochastic.py  test_table.py  test_views.py  test_week.py  test_well.py  test_welltheory.py
test/wildcatting/: test_game.py  test_gameservice.py
test/wildcatting/model/: test_oilfield.py  test_serialize.py
themes/West Texas/: facts
vulture/: allowlist.py
wiki/: Gameplay.wiki  OilReservoirs.wiki  Roadmap.wiki  StatsToTrack.wiki
wildcatting/: ClientCommand.py  ConsoleCommand.py  PingCommand.py  ReportCommand.py  ScreensaverCommand.py  ServerCommand.py  ThemeInfoCommand.py  cli.py  client.py  cmdparse.py  colors.py  commands.py  console.py  exceptions.py  game.py  model.py  oilfield.py  oilprices.py  report.py  reservoir.py  server.py  settings.py  state.py  table.py  theme.py  turn.py  util.py  version.py  views.py  week.py  welltheory.py
wildcatting/model/: __init__.py  clientinfo.py  foo.py  oilfield.py  player.py  report.py  serialize.py  setting.py  update.py
wildcatting/theme/: __init__.py  texas.py  theme.py  westtexas.py
wildcatting/view/: __init__.py  oilfieldview.py  playerview.py  reportview.py  view.py  wildcattingview.py
