[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wildcatting"
version = "1.5"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
go-wildcatting = "wildcatting.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]

