[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wildcatting"
version = "1.5"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
go-wildcatting = "wildcatting.cli:main"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.18",
    "vulture>=2.16",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"wildcatting/theme/westtexas.py" = ["E501"]

[tool.vulture]
min_confidence = 60
ignore_names = ["test*"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

